# semval

./: .codespellignore  .commitlintrc.json  .commitlintrc.json.license  .gitignore  .justfile  .markdownlint-cli2.yaml  .pre-commit-config.yaml  .prettierrc.yaml  .rustfmt.toml  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  clippy.toml
.github/: dependabot.yaml
.github/workflows/: build-and-test.yaml  continuous-integration.yaml  pre-commit.yaml  pre-release.yaml  security-audit.yaml
examples/: reservation.rs
src/: context.rs  error.rs  lib.rs  smallvec.rs  util.rs
