# SPDX-FileCopyrightText: slowtec GmbH
# SPDX-License-Identifier: MPL-2.0

[package]
name = "semval"
description = "Semantic validation"
keywords = ["semantic", "validation"]
version = "0.4.0"
license = "MPL-2.0"
readme = "README.md"
authors = ["slowtec GmbH <post@slowtec.de>", "Uwe Klotz <uwe.klotz@gmail.com>"]
repository = "https://github.com/slowtec/semval"
categories = ["no-std", "rust-patterns"]
edition = "2021"

[dependencies]
smallvec = { version = "1.9.0", features = [] }

[features]
default = ["std"]
std = []
